--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,54 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
 # Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
+  print-hello:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: cimg/base:stable
+      - image: circleci/node:13.8.0
     # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-      - checkout
+      # - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
+          name: "Print hello"
+          command: "echo hello"
+  print-world:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    docker:
+      - image: circleci/node:13.8.0
+    # Add steps to the job
+    steps:
+      # - checkout
+      - run:
+          name: "Print world"
+          command: "echo World!"
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  print-hello-workflow:
     jobs:
-      - say-hello
+      - print-hello
+
+  print-world-workflow:
+    jobs:
+      - print-world
+      requires:
+        - print-hello
+
+
+workflows:
+  test-env-vars:
+    jobs:
+      - build
+
+jobs:
+  build:
+    docker:
+      - image: cimg/base:2021.11
+    steps:
+      - checkout
+      - run:
+          name: "echo an env var that is part of our project"
+          command: |
+            echo $my_env_var # this env var must be set within the project
