added test env variable

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,12 +26,9 @@ jobs:
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  print-hello-workflow:
+  welcome:
     jobs:
       - print-hello
-
-  print-world-workflow:
-    jobs:
       - print-world
       requires:
         - print-hello
