--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 
 # Define a job to be invoked later in a workflow.
 jobs:
-  print-hello:
+  print_hello:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     docker:
       - image: circleci/node:13.8.0
@@ -13,7 +13,7 @@ jobs:
       - run:
           name: "Print hello"
           command: "echo hello"
-  print-world:
+  print_world:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     docker:
       - image: circleci/node:13.8.0
@@ -28,10 +28,10 @@ jobs:
 workflows:
   welcome:
     jobs:
-      - print-hello
-      - print-world
-      requires:
-        - print-hello
+      - print_hello
+      - print_world
+        requires:
+          - print_hello
 
 
 workflows:
