added test env variable

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,9 +30,9 @@ workflows:
     jobs:
       - print_hello
 
-      - print_world:
-        requires:
-          - print_hello
+      - print_world
+      #   requires:
+      #     - print_hello
 
 
 # workflows:
