--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,8 +41,7 @@ workflows:
       - print_hello
 
       - print_world
-          requires:
-            - print_hello
+          requires: print_hello
 
   test-env-vars:
     jobs:
