--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,8 +40,9 @@ workflows:
     jobs:
       - print_hello
 
-      - print_world
-          requires: print_hello
+      - print_world:
+          requires: 
+            - print_hello
 
   test-env-vars:
     jobs:
