--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,11 @@ jobs:
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
+
+  print-parameter-id:
+    jobs:
+      - print_id
+      
   welcome:
     jobs:
       - print_hello
