--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,8 +67,17 @@ jobs:
       - attach_workspace:
           at: ~/
       - run: cat ~/output.txt
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+
+  test_error:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: exit 1
+      - run:
+          name: on error
+          command: echo "Hello Error!"
+          when: on_fail
+
 workflows:
 
   print-parameter-id:
@@ -93,5 +102,9 @@ workflows:
       - print_output_file:
           requires:
             - save_hello_world_output
+
+  simulate-error:
+    jobs:
+      - test-error
 
 
