--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,29 @@ jobs:
               --template-file template.yml \
               --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
               --region us-east-1
+  # Exercise: Config and Deployment
+  configure_infrastructure: 
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+              # You can get this ID in the section where you registered the SSH Key
+              fingerprints: ["60:2f:29:78:98:bb:3d:b2:5c:a9:7a:ef:be:cd:89:c6"] 
+      - run:
+          name: Install Ansible
+          command: apk add --update ansible
+            # Install Ansible
+      - run:
+          name: Run Playbook and Configure server
+          command: 
+            ansible-playbook -i inventory-file main-remote.yaml
 # Sequential workflow
 workflows:
   # Name the workflow
   myWorkflow:
     jobs:
       - create_infrastructure
+      # - configure_infrastructure:
+      #     requires:
+      #       - create_infrastructure
