--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,12 +36,30 @@ jobs:
             Run Playbook and Configure server
           command: |
             ansible-playbook -i inventory main-remote.yaml
+  # Exercise: Smoke Testing
+  smoke_test:
+  docker:
+    - image: alpine:latest
+  steps:
+    - run: apk add --update curl
+    - run:
+        name: smoke test
+        command: |
+          URL="https://blog.udacity.com/"
+          # Test if website exists
+          if curl -s --head ${URL} 
+          then
+            return 0
+          else
+            return 1
+          fi
 # Sequential workflow
 workflows:
   # Name the workflow
   myWorkflow:
     jobs:
+      - smoke_test
       # - create_infrastructure
-      - configure_infrastructure
+      # - configure_infrastructure
       #     requires:
       #       - create_infrastructure
