--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ commands:
     steps:
       - run:
           name: Destroy environment
+          when: on fail
           command: |
             aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7}
 jobs:
@@ -29,7 +30,7 @@ jobs:
               --region us-east-1
       - run: return 1
       - destroy_environment
-        when: on_fail
+        # when: on_fail
   # Exercise: Config and Deployment
   configure_infrastructure: 
     docker:
