--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,8 @@ jobs:
               --template-file template.yml \
               --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
               --region us-east-1
-      - run: return 1
-      - destroy_environment
+      # - run: return 1
+      # - destroy_environment
         # when: on_fail
   # Exercise: Config and Deployment
   configure_infrastructure: 
@@ -51,14 +51,14 @@ jobs:
             ansible-playbook -i inventory main-remote.yaml
   # Exercise: Smoke Testing
   smoke_test:
-  docker:
-    - image: alpine:latest
-  steps:
-    - run:
-        name: Test job
-        # Fail the job intentionally to simulate an error.
-        command:  return 1
-    - destroy_environment
+    docker:
+      - image: alpine:latest
+    steps:
+      - run:
+          name: Test job
+          # Fail the job intentionally to simulate an error.
+          command:  return 1
+      - destroy_environment
 # Sequential workflow
 workflows:
   # Name the workflow
