--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ commands:
     steps:
       - run:
           name: Destroy environment
-          when: on fail
+          when: on_fail
           command: |
             aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7}
 jobs:
@@ -28,6 +28,7 @@ jobs:
               --template-file template.yml \
               --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
               --region us-east-1
+          command:  return 1
       # - run: return 1
       # - destroy_environment
         # when: on_fail
@@ -52,12 +53,12 @@ jobs:
   # Exercise: Smoke Testing
   smoke_test:
     docker:
-      - image: alpine:latest
+      - image: amazon/aws-cli
     steps:
       - run:
           name: Test job
           # Fail the job intentionally to simulate an error.
-          command:  return 1
+          command: return 1
       - destroy_environment
 # Sequential workflow
 workflows:
