--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
               --template-file template.yml \
               --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
               --region us-east-1
-          command:  return 1
+          # command:  return 1
       # - run: return 1
       # - destroy_environment
         # when: on_fail
