--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,8 @@ jobs:
               --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
               --region us-east-1
           # command:  return 1
-      - run: return 1
-      - destroy_environment
+      # - run: return 1
+      # - destroy_environment
         # when: on_fail
   # Exercise: Config and Deployment
   configure_infrastructure: 
@@ -58,7 +58,7 @@ jobs:
       - run:
           name: Test job
           # Fail the job intentionally to simulate an error.
-          command: return 1
+          command: exit 1
       - destroy_environment
 # Sequential workflow
 workflows:
