--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,10 +28,7 @@ jobs:
               --template-file template.yml \
               --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
               --region us-east-1
-          # command:  return 1
-      # - run: return 1
-      # - destroy_environment
-        # when: on_fail
+
   # Exercise: Config and Deployment
   configure_infrastructure: 
     docker:
@@ -53,12 +50,12 @@ jobs:
   # Exercise: Smoke Testing
   smoke_test:
     docker:
-      - image: amazon/aws-cli
+      - image: alpine:latest
     steps:
       - run:
           name: Test job
           # Fail the job intentionally to simulate an error.
-          command: exit 1
+          command: return 1
       - destroy_environment
 # Sequential workflow
 workflows:
