rollout back exercise

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
     docker:
       - image: amazon/aws-cli
     steps:
-      - run:
+      - shell:
           name: Test job
           # Fail the job intentionally to simulate an error.
           command: return 1
