rollout back exercise

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ commands:
           name: Destroy environment
           when: on_fail
           command: |
-            aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
+            aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7}
 jobs:
   create_infrastructure: 
     docker:
@@ -26,7 +26,7 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file template.yml \
-              --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
+              --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7} \
               --region us-east-1
 
   # Exercise: Config and Deployment
@@ -55,7 +55,7 @@ jobs:
       - run:
           name: Test job
           # Fail the job intentionally to simulate an error.
-          command: exit 1
+          command: return 1
       - destroy_environment
 # Sequential workflow
 workflows:
