--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ jobs:
           --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:7} \
           --parameter-overrides MyBucketName="mybucket-11363629259-${CIRCLE_WORKFLOW_ID:0:7}"
     # Uncomment the step below if yoou wish to upload all contents of the current directory to the S3 bucket
-    # - run: aws s3 sync . s3://mybucket-11363629259-${CIRCLE_WORKFLOW_ID:0:7} --delete
+    - run: aws s3 sync . s3://mybucket-11363629259-${CIRCLE_WORKFLOW_ID:0:7} --delete
   get_last_deployment_id:
     docker:
       - image: amazon/aws-cli
