testing the new deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,10 +125,10 @@ workflows:
   # Name the workflow
   myWorkflow:
     jobs:
-      # - create_infrastructure
-      # - configure_infrastructure
-      #     requires:
-      #       - create_infrastructure
+      - create_infrastructure
+      - configure_infrastructure
+          requires:
+            - create_infrastructure
       # - smoke_test:
       #     requires:
       #       - create_infrastructure
