testing the new deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,7 +126,7 @@ workflows:
   myWorkflow:
     jobs:
       - create_infrastructure
-      - configure_infrastructure
+      - configure_infrastructure:
           requires:
             - create_infrastructure
       # - smoke_test:
